crates/etch-core/tests/snapshots/corpus_tests__extensions-comments-no-nesting.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Before  but the comment closed at the first ~} and this is visible text ~}."
          }
        ]
      }
    ]
  },
  "errors": []
}
