crates/etch-core/tests/snapshots/corpus_tests__extensions-container-directives-anonymous-close.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "One"
          }
        },
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The first chapter opens with a short paragraph."
              }
            ]
          }
        ],
        "named_close": false
      }
    ]
  },
  "errors": []
}
