crates/etch-core/tests/snapshots/corpus_tests__extensions-container-directives-mismatched-close.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "One"
          }
        },
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "This container is closed with the wrong directive name."
              }
            ]
          }
        ],
        "named_close": true
      }
    ]
  },
  "errors": [
    {
      "kind": "Error",
      "message": "expected :::/chapter, got :::/section on line 5",
      "line": 5,
      "column": 1
    }
  ]
}
