crates/etch-core/tests/snapshots/corpus_tests__extensions-container-directives-named-close.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 5,
            "column": 12
          }
        },
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "One"
          }
        },
        "raw_body": "The named close should match the opening directive.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The named close should match the opening directive."
              }
            ]
          }
        ],
        "named_close": true
      }
    ]
  },
  "errors": []
}
