crates/etch-core/tests/snapshots/corpus_tests__extensions-container-directives-nested-containers.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 7,
            "column": 12
          }
        },
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "One"
          }
        },
        "raw_body": ":::section{title=\"North Dock\"}\nThe ferry rope snapped just before dawn.\n:::/section",
        "body": [
          {
            "type": "ContainerDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 4,
                "column": 1
              },
              "end": {
                "line": 6,
                "column": 12
              }
            },
            "name": "section",
            "attrs": {
              "pairs": {
                "title": "North Dock"
              }
            },
            "raw_body": "The ferry rope snapped just before dawn.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "The ferry rope snapped just before dawn."
                  }
                ]
              }
            ],
            "named_close": true
          }
        ],
        "named_close": true
      }
    ]
  },
  "errors": []
}
