crates/etch-core/tests/snapshots/corpus_tests__extensions-container-directives-with-attrs.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "name": "columns",
        "attrs": {
          "pairs": {
            "gap": "1rem",
            "count": "2"
          }
        },
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Left and right content are grouped under one container."
              }
            ]
          }
        ],
        "named_close": true
      }
    ]
  },
  "errors": []
}
