crates/etch-core/tests/snapshots/corpus_tests__extensions-container-directives-with-block-directives.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "ContainerDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 11,
            "column": 12
          }
        },
        "name": "chapter",
        "attrs": {
          "pairs": {
            "title": "Storm Journal"
          }
        },
        "raw_body": "::aside\nKeep the lamp away from the wet ledge.\n::\n\n::spoiler[Hidden note]\nThe spare key is under the blue crate.\n::",
        "body": [
          {
            "type": "BlockDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 4,
                "column": 1
              },
              "end": {
                "line": 6,
                "column": 3
              }
            },
            "name": "aside",
            "raw_body": "Keep the lamp away from the wet ledge.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "Keep the lamp away from the wet ledge."
                  }
                ]
              }
            ]
          },
          {
            "type": "BlockDirective",
            "directive_id": 3,
            "span": {
              "start": {
                "line": 8,
                "column": 1
              },
              "end": {
                "line": 10,
                "column": 3
              }
            },
            "name": "spoiler",
            "label": [
              {
                "type": "Text",
                "value": "Hidden note"
              }
            ],
            "raw_label": "Hidden note",
            "raw_body": "The spare key is under the blue crate.",
            "body": [
              {
                "type": "Paragraph",
                "content": [
                  {
                    "type": "Text",
                    "value": "The spare key is under the blue crate."
                  }
                ]
              }
            ]
          }
        ],
        "named_close": true
      }
    ]
  },
  "errors": []
}
