crates/etch-core/tests/snapshots/corpus_tests__extensions-frontmatter-empty.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": {
      "raw": "",
      "fields": {}
    },
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "This document has empty frontmatter and then normal content."
          }
        ]
      }
    ]
  },
  "errors": []
}
